css/details.css
/* Breadcrumb: https://codepen.io/renaudtertrais/pen/nELvvd */
.content {
    /* display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column; */
    /* gap: var(--sz-5); */

    padding: var(--sz-8);
}

:root {
    --breadcrumb-size: 55px;
}

/* breadcrumb */
.breadcrumb-container {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

ul.breadcrumb {
    margin-left: var(--breadcrumb-size);
    display: inline-block;
    list-style: none;
}

ul.breadcrumb li {
    /* styling outside */
    background-color: var(--white);
    padding: calc(var(--breadcrumb-size) / 10 - 1px);
    border-radius: var(--breadcrumb-size);

    float: right;
    position: relative;
    margin-left: calc(-1 * var(--breadcrumb-size));
    transition: all 0.2s ease;
}

ul.breadcrumb li a {
    /* display: inline-block; */
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;

    overflow: hidden;
    text-align: center;
    transition: all 0.2s ease;
    font-weight: 600;
    font-size: var(--text-xl);

    color: var(--brown);
    background-color: var(--green);
    border: 2px var(--brown) solid;
    box-shadow: var(--brown) 2px 2px 0 0;

    border-radius: var(--breadcrumb-size);
    height: var(--breadcrumb-size);
    width: var(--breadcrumb-size);
    min-width: var(--breadcrumb-size);
    line-height: var(--breadcrumb-size);
    padding-left: calc(var(--breadcrumb-size) + 10px);
    padding-right: calc(var(--breadcrumb-size) / 2 + var(--breadcrumb-size) / 6);
}

ul.breadcrumb li a .text {
    display: none;
    font-size: var(--text-lg);
    transition: all 0.2s ease 0.3s;
    opacity: 0;
}

ul.breadcrumb li:last-child a {
    padding: 0;
}

ul.breadcrumb li:hover a,
ul.breadcrumb li:focus a {
    border-color: var(--brown);
    background-color: var(--pink);
    box-shadow: var(--brown) 3px 3px 0 0;
}

ul.breadcrumb li:active a {
    box-shadow: var(--brown) 1px 1px 0 0;
    transform: translate(2px, 2px);
}

ul.breadcrumb li:not(:last-child):hover a,
ul.breadcrumb li:not(:last-child):focus a {
    /* width: calc(var(--breadcrumb-size) * 3); */
    width: fit-content;
}

ul.breadcrumb li:hover a .text,
ul.breadcrumb li:focus a .text {
    display: inline-block;
    opacity: 1;
}

ul.breadcrumb li:last-child:hover,
ul.breadcrumb li:last-child:focus {
    transform: scale(1.15);
}


/* detail illustration */
.details-illustration {
    width: 100%;
    height: 60vh;
    /* aspect-ratio: 1/1; */
    display: grid;
    justify-content: center;
    align-items: center;
    /* column-gap: var(--sz-3); */
    /* row-gap: var(--sz-3); */
    grid-template:
        "main sub1 price"0.3fr "main sub2 btn"0.3fr "main sub3 btn"0.3fr / 2fr 1.3fr 1fr;
}

img[class*="details-illustration"] {
    object-fit: cover;
    object-position: center;
    border: 4px solid var(--primary-color-dark);
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.details-illustration-main {
    grid-area: main;
}

.details-illustration-sub:nth-child(1) {
    grid-area: sub1;
}

.details-illustration-sub:nth-child(2) {
    grid-area: sub2;
}

.details-illustration-sub:nth-child(3) {
    grid-area: sub3;
}

.details-illustration-price {
    grid-area: price;
    justify-self: center;
    align-self: flex-end;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-size: var(--text-5xl);

}

.details-illustration-btn {
    grid-area: btn;

    font-size: var(--text-xl);
    justify-self: center;

    display: flex;
    align-items: center;
    justify-content: center;
    height: 30%;
    width: 80%;
    border-radius: 2rem;
    font-weight: 600;
    font-size: var(--text-2xl);
    line-height: 50px;
}


/* Details Info */
.details-info {
    width: 100%;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    margin-bottom: var(--sz-28);
}

.details-info-title {
    font-size: var(--text-7xl);
    text-align: center;
    width: 100%;
    line-height: 2;
}

.details-info-author {
    font-size: var(--text-4xl);
    line-height: 1.7;
    font-weight: 600;
    text-align: center;
    width: 100%;
}

.details-info-desc {
    text-indent: var(--sz-10);
    font-size: var(--text-xl);
    line-height: 1.7;
    margin-top: var(--sz-2);
    min-height: var(--sz-56);
}

hr {
    display: none;
}

/* The Modal (background) */
.modal {
    display: none;
    /* Hidden by default */
    justify-content: center;
    align-items: center;

    position: fixed;
    z-index: 50;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;

    background-color: rgba(0, 0, 0, 0.6);
    backdrop-filter: blur(10px);
    transition: all 0.2s ease-in-out;
}

.modal.show {
    display: flex;
}

/* Modal Content */
.modal-content {
    background-color: var(--white);
    box-shadow: rgba(100, 100, 111, 0.4) 0px 7px 29px 0px;
    border-radius: var(--sz-2);

    padding: var(--sz-10) var(--sz-8);

    width: 80%;
    max-width: 650px;

    display:flex;
    align-items:center;
    justify-content:center;
    flex-direction:column;
    gap: var(--sz-4);
}

.modal-content-img {    
    position: relative;
    z-index: 1;
}
.modal-content-img-main,
.modal-content-img-sub1,
.modal-content-img-sub2 {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    color: var(--darkgreen);
    font-size: var(--text-7xl);
}
.modal-content-img-sub1 {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0.6;
    z-index: -1;
    animation: pulse-animation1 1s infinite alternate;
}
.modal-content-img-sub2 {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0.3;
    z-index: -2;
    animation: pulse-animation2 0.8s infinite alternate 0.2s;
}

.modal-content-text {
    text-align: center;
    display:flex;
    align-items:center;
    justify-content:center;
    flex-direction:column;
    padding: var(--sz-4) 0;
    gap: var(--sz-3);
}
.modal-content-text h2 {
    font-size: var(--text-2xl);
    font-weight: 600;
    line-height: 1.5;
}
.modal-content-text p {
    font-size: var(--text-lg);
    line-height: 1.5;
}

/* The Close Button */
.close {
    color: var(--primary-color-dark);
    align-self: flex-end;
    font-size: var(--text-3xl);
    font-weight: bold;
    cursor: pointer;
    transition: all 0.2s ease;
}

.close:hover,
.close:focus {
    opacity: 0.7;
    transform: scale(1.1);
}


@media screen and (max-width: 1024px) {

    /* body {
        padding: var(--sz-6);
        gap: var(--sz-12);
    } */
    .content {
        padding: var(--sz-14);
        gap: var(--sz-12);
    }

    .breadcrumb-container {
        justify-content: center;
    }
    
    .details-illustration {

        column-gap: 0;
        height: 100vh;
        grid-template:
            "main main main"0.6fr "sub1 sub2 sub3"0.3fr "price price price"0.03fr "btn btn btn"0.07fr / 1fr 1fr 1fr;

    }
    img.details-illustration-main {
        /* object-fit: contain; */
    }

    .details-illustration-price {
        align-self: center;
        font-weight: 700;
        width: 100%;
        font-size: var(--text-4xl);
        margin: var(--sz-7) 0 var(--sz-3);

    }

    .details-illustration-price span {
        width: 100%;
        text-align: center;
    }

    .details-illustration-btn {
        height: 100%;
        width: 50%;
        /* margin-top: var(--sz-2); */
    }

    hr {
        display: block;
        width: 100%;
        height: var(--sz-1);
        margin: var(--sz-10) 0;
        border-radius: 9999px;
        border: none;
        background-color: var(--primary-color-dark);
    }

    .details-info-desc {
        font-size: var(--text-2xl);
    }
}

@media screen and (max-width: 640px) {

    /* body {
        padding: var(--sz-10) var(--sz-4);
        gap: var(--sz-7);
    } */
    .content {
        padding: var(--sz-10) var(--sz-4);
        gap: var(--sz-7);
    }

    ul.breadcrumb li:not(:last-child):hover a,
    ul.breadcrumb li:not(:last-child):focus a {
        padding-left: var(--breadcrumb-size);
        padding-right: calc(var(--breadcrumb-size) / 6);
    }

    .details-illustration {
        height: 80vh;
        grid-template:
            "main main main"0.6fr "sub1 sub2 sub3"0.2fr "price price price"0.1fr "btn btn btn"0.1fr / 1fr 1fr 1fr;

    }

    .details-illustration-price {
        font-size: var(--text-3xl);
        margin-top: var(--sz-5);

    }

    .details-illustration-btn {
        font-size: var(--text-lg);
        margin-top: var(--sz-3);
    }

    hr {
        margin: var(--sz-8) 0;
    }

    .details-info {
        padding: 0 var(--sz-1);
    }

    .details-info-title {
        font-size: var(--text-5xl);
        text-indent: var(--sz-3);
        text-align: left;
        line-height: 1.7;
    }

    .details-info-author {
        font-size: var(--text-3xl);
        text-align: left;
        text-indent: var(--sz-3);
        line-height: 1.5;
    }

    .details-info-desc {
        text-indent: var(--sz-3);
        font-size: var(--text-lg);
        line-height: 1.5;
    }

    .modal-content {
        width: 95%;
        padding: var(--sz-7) var(--sz-5);
    }
}

